cria funcao para devolver a pagina principal a url /

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,5 @@
+{{define "Index"}}
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -42,3 +44,5 @@
         </section>
 </body>
 </html>
+
+{{end}}
