--- a/templates/index.html
+++ b/templates/index.html
@@ -30,14 +30,15 @@
                         </tr>
                     </thead>
                     <tbody>
-                        
+                        {{range .}}
                         <tr>
-                            <td>1</td>
-                            <td>Camisa</td>
-                            <td>Muito Bonita</td>
-                            <td>59.90</td>
-                            <td>7</td>
+                            <td>{{.Id}}</td>
+                            <td>{{.Nome}}</td>
+                            <td>{{.Descricao}}</td>
+                            <td>{{.Preco}}</td>
+                            <td>{{.Quantidade}}</td>
                         </tr>
+                        {{end}}
                     </tbody>
                 </table>
             </div>
