cria tela e controller para direcionar requisicao de cadastro de produto

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,6 +43,9 @@
                 </table>
             </div>
         </section>
+        <div class="card-footer"></div>
+            <a href="/new" class="btn btn-primary mb-2">Novo Produto</a>
+    </div>
 </body>
 </html>
 
