criacao do botao e da tela de edit

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,7 @@
                             <td>{{.Preco}}</td>
                             <td>{{.Quantidade}}</td>
                             <td><a href="/delete?id={{.Id}}" class="btn btn-danger">Deletar</a></td>
+                            <td><a href="/edit?id={{.Id}}" class="btn btn-info">Editar</a></td>
                         </tr>
                         {{end}}
                     </tbody>
