faz edicao corretamente do produto

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -21,7 +21,7 @@
                 <p class="lead">Insira os detalhes</p>
             </div>
         </div>
-        <form method="PUT" action="update">
+        <form method="POST" action="update">
             <input type="hidden" name="id" value="{{.Id}}">
             <div class="row">
                 <div class="col-sm-8">
